# trap

./: CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tutorial.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: tutorial.ipynb
examples/test_data/: psf_model.fits
src/trap/: detection.py  embed_shell.py  image_coordinates.py  likelihood_tools.py  makesource.py  parameters.py  pca_regression.py  plotting_tools.py  reduction_wrapper.py  regression.py  regressor_selection.py  template.py  utils.py
trap/: __init__.py  detection.py  embed_shell.py  image_coordinates.py  likelihood_tools.py  makesource.py  parameters.py  pca_regression.py  plotting_tools.py  reduction_wrapper.py  regression.py  regressor_selection.py  template.py  utils.py
trap/test_data/: parallactic_angles.fits
